# genesisgraph

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CRITICAL_GAPS_ANALYSIS.md  DOCS_NAVIGATION.md  DOCUMENTATION_ORGANIZATION_SUMMARY.md  DOCUMENT_EXPLORER_GUIDE.md  FAQ.md  GOVERNANCE.md  IMPROVEMENT_PLAN.md  LICENSE  QUICKSTART.md  README.md  SDK-DEVELOPMENT-GUIDE.md  SDK-QUICK-REFERENCE.md  SECURITY.md  SECURITY_AUDIT_FINDINGS.md  STRATEGIC_CONTEXT.md  USE_CASES.md  claude.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/: PR_MERGE_WORKFLOW.md
.github/workflows/: ci.yml  docs.yml  security.yml
docs/: AGENT_PROVENANCE_EXTENSION.md  DELEGATION_AND_AUTHORIZATION.md  LIFECYCLE_AND_REVOCATION.md  THREAT_MODEL.md  TRANSPARENCY_LOG.md  faq.md  index.md
docs/developer-guide/: architecture.md  contributing.md  troubleshooting.md
docs/getting-started/: examples.md  installation.md  quickstart.md
docs/javascripts/: extra.js
docs/reference/: implementation-summary.md
docs/specifications/: main-spec.md  zkp-templates.md
docs/strategic/: critical-gaps.md  roadmap.md
docs/stylesheets/: extra.css
docs/user-guide/: did-web-guide.md  disclosure-levels.md  overview.md  profile-validators.md  selective-disclosure.md
examples/: agent-medical-assistant-session.gg.yaml  bbs-plus-attestation.gg.yaml  did-web-example.json  did-web-organization.json  level-a-full-disclosure.gg.yaml  level-b-partial-envelope.gg.yaml  level-c-sealed-subgraph.gg.yaml  predicate-attestation.gg.yaml  python_sdk_quickstart.py  sd-jwt-attestation.gg.yaml  workflow-with-did-web.gg.yaml  zkp-ai-safety-attestation.gg.yaml  zkp-manufacturing-qc-attestation.gg.yaml
genesisgraph/: __init__.py  builder.py  cli.py  did_resolver.py  errors.py  transparency_log.py  validator.py
genesisgraph/compliance/: __init__.py  fda_21_cfr_11.py  iso_9001.py
genesisgraph/credentials/: __init__.py  bbs_plus.py  predicates.py  sd_jwt.py  zkp_templates.py
genesisgraph/profiles/: __init__.py  ai_basic_v1.py  base.py  cam_v1.py  registry.py
schema/: genesisgraph-core-v0.1.yaml
scripts/: explore_docs.sh  verify_sealed_subgraph.py  verify_transparency_anchoring.py
sdks/javascript/: .eslintrc.js  README.md  jest.config.js  package.json
sdks/javascript/examples/: quickstart.ts
sdks/javascript/src/: attestation.ts  entity.test.ts  entity.ts  genesisgraph.test.ts  genesisgraph.ts  index.ts  operation.ts  tool.ts  types.ts
spec/: MAIN_SPEC.md
tests/: __init__.py  conftest.py  test_bbs_plus.py  test_builder.py  test_cli.py  test_did_ion_ethr.py  test_did_web_integration.py  test_performance.py  test_predicates.py  test_profile_validators.py  test_sd_jwt.py  test_security.py  test_signature_verification.py  test_transparency_log.py  test_validator.py  test_zkp_templates.py
tools/progressive-reveal-cli/: README.md  pyproject.toml  setup.py
tools/progressive-reveal-cli/reveal/: __init__.py  cli.py  core.py  detectors.py  formatters.py  grep_filter.py
tools/progressive-reveal-cli/reveal/analyzers/: __init__.py  base.py  json_analyzer.py  markdown_analyzer.py  python_analyzer.py  text_analyzer.py  yaml_analyzer.py
