[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesisgraph"
version = "0.3.0"
description = "Universal Verifiable Process Provenance"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "GenesisGraph Contributors"}
]
keywords = ["provenance", "verification", "cryptography", "workflow", "traceability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pyyaml>=6.0,<7.0",
    "jsonschema>=4.17.0,<5.0",
    "cryptography>=41.0.0,<42.0.0",
]

[project.optional-dependencies]
cli = [
    "click>=8.1.0,<9.0",
    "rich>=13.0.0,<14.0.0",
]
dev = [
    "pytest>=7.4.0,<8.0",
    "pytest-cov>=4.1.0,<5.0",
    "black>=23.0.0,<24.0",
    "ruff>=0.1.0,<0.2.0",
    "mypy>=1.5.0,<2.0",
    "types-pyyaml>=6.0.0,<7.0",
]
security = [
    "bandit>=1.7.5,<2.0",
    "safety>=2.3.5,<4.0",
]
credentials = [
    # SD-JWT support (IETF reference implementation)
    "sd-jwt>=0.10.0,<1.0",
    # JWT/JWK handling
    "jwcrypto>=1.5.0,<2.0",
    # Zero-knowledge proofs for range proofs and BBS+
    "zksk>=0.0.2,<1.0",
    # Petlib for pairing-based cryptography (BBS+ foundation)
    "petlib>=0.0.45,<1.0",
]

[project.urls]
Homepage = "https://github.com/genesisgraph/genesisgraph"
Documentation = "https://genesisgraph.dev"
Repository = "https://github.com/genesisgraph/genesisgraph"
Issues = "https://github.com/genesisgraph/genesisgraph/issues"

[project.scripts]
gg = "genesisgraph.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["genesisgraph*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=genesisgraph",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP", "YTT", "S", "B", "A", "C4", "T10", "ISC", "ICN", "PIE", "PT", "RET", "SIM", "ARG", "PLE", "PLR", "PLW"]
ignore = ["E501", "S101"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
